# rag_cli

./: README.md  pyproject.toml
configs/: data.yaml  rag.yaml
data/raw/sec-edgar-filings/AAPL/10-K/0000320193-19-000119/: full-submission.txt
data/raw/sec-edgar-filings/AAPL/10-K/0000320193-20-000096/: full-submission.txt
data/raw/sec-edgar-filings/AAPL/10-K/0000320193-21-000105/: full-submission.txt
data/raw/sec-edgar-filings/AAPL/10-K/0000320193-22-000108/: full-submission.txt
data/raw/sec-edgar-filings/AAPL/10-K/0000320193-23-000106/: full-submission.txt
data/raw/sec-edgar-filings/AMZN/10-K/0001018724-20-000004/: full-submission.txt
data/raw/sec-edgar-filings/AMZN/10-K/0001018724-21-000004/: full-submission.txt
data/raw/sec-edgar-filings/AMZN/10-K/0001018724-22-000005/: full-submission.txt
data/raw/sec-edgar-filings/AMZN/10-K/0001018724-23-000004/: full-submission.txt
data/raw/sec-edgar-filings/AMZN/10-K/0001018724-24-000008/: full-submission.txt
data/raw/sec-edgar-filings/META/10-K/0001326801-20-000013/: full-submission.txt
data/raw/sec-edgar-filings/META/10-K/0001326801-21-000014/: full-submission.txt
data/raw/sec-edgar-filings/META/10-K/0001326801-22-000018/: full-submission.txt
src/rag/: __init__.py  entrypoint.py  logging_config.py  test.py
src/rag/commands/: __init__.py  check.py  clean.py  command.py  deploy.py  invoke.py
src/rag/pipelines/: __init__.py  make_dataset.py  utils.py
src/rag/rag_system/: __init__.py  checker.py  cleaner.py  deployer.py  invoker.py  utils.py
(+3 files in other folders)
